[REFACTOR] String formatting.